--- a/site/styles/content_mobile.less
+++ b/site/styles/content_mobile.less
@@ -217,6 +217,7 @@ div.form_container form label.checkbox {
 	box-sizing: border-box;
 	display: block;
 	padding-bottom: 1rem;
+	margin-right: -2rem;
 
 	& input {
 		width: 13px;
@@ -254,7 +255,7 @@ section#courses h1 {
 
 section#courses ul {
 	margin: 0;
-	padding: 1rem 1rem;
+	padding: 0rem 1rem;
 	list-style-type: none;
 }
 
@@ -279,6 +280,7 @@ section#courses ul li svg {
 
 section#statements {
 	color: @color_black;
+	padding: 1rem 0;
 }
 
 section#statements ul {
@@ -337,11 +339,6 @@ section#partners div#logos {
 	padding: 1rem;
 }
 
-section#partners div#logos h2 {
-	margin-top: 1rem;
-	margin-bottom: 2rem;
-}
-
 section#partners div#logos a {
 	display: inline-block;
 	width: 142px;
@@ -377,31 +374,33 @@ section#graduates h2 {
 
 section#graduates figure {
 	display: inline-block;
-	width: 50%;
+	width: 43%;
 	margin: 0;
+	margin-left: 1rem;
 	margin-bottom: 1rem;
-}
-
-section#graduates figure div {
-	width: 100%;
-	height: 145px;
 	overflow: hidden;
-	border: 1px solid @color_black;
-	white-space: nowrap;
+	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.4);
+	min-height: 330px;
+	back
+
+	&:nth-of-type(even) {
+		margin-left: 0;
+	}
 
 	&:before {
-		display: inline-block;
+		content: "";
 		width: 0;
 		height: 100%;
+		display: inline-block;
 		vertical-align: middle;
-		content: '';
 	}
 }
 
-section#graduates figure div img {
-	width: 100%;
+section#graduates figure img {
 	display: inline-block;
     vertical-align: middle;
+    width: 100%;
+    height: 100%;
 }
 
 section#graduates figure figcaption {
